--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "next-connect-prisma",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.34",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
-    "typescript": "4.6.4"
-  }
+	"name": "next-connect-prisma",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"format": "prettier --write .",
+		"lint": "next lint",
+		"prepare": "husky install"
+	},
+	"dependencies": {
+		"next": "12.1.6",
+		"react": "18.1.0",
+		"react-dom": "18.1.0"
+	},
+	"devDependencies": {
+		"@types/node": "17.0.34",
+		"@types/react": "18.0.9",
+		"@types/react-dom": "18.0.4",
+		"autoprefixer": "^10.4.7",
+		"eslint": "8.15.0",
+		"eslint-config-next": "12.1.6",
+		"husky": "^8.0.1",
+		"postcss": "^8.4.13",
+		"prettier": "^2.6.2",
+		"prettier-plugin-tailwindcss": "^0.1.11",
+		"tailwindcss": "^3.0.24",
+		"typescript": "4.6.4"
+	}
 }
