--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@prisma/client": "^3.14.0",
 		"next": "12.1.6",
 		"next-connect": "^0.12.2",
 		"react": "18.1.0",
@@ -27,6 +28,7 @@
 		"postcss": "^8.4.13",
 		"prettier": "^2.6.2",
 		"prettier-plugin-tailwindcss": "^0.1.11",
+		"prisma": "^3.14.0",
 		"tailwindcss": "^3.0.24",
 		"typescript": "4.6.4"
 	}
