--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"next": "12.1.6",
 		"next-connect": "^0.12.2",
 		"react": "18.1.0",
-		"react-dom": "18.1.0"
+		"react-dom": "18.1.0",
+		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.34",
