--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 		"lint": "next lint",
 		"prepare": "husky install"
 	},
+	"prisma": {
+		"seed": "ts-node --compiler-options {\"module\":\"commonjs\"} prisma/seeders"
+	},
 	"dependencies": {
 		"@prisma/client": "^3.14.0",
 		"next": "12.1.6",
@@ -19,6 +22,7 @@
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^6.3.1",
 		"@types/node": "17.0.34",
 		"@types/react": "18.0.9",
 		"@types/react-dom": "18.0.4",
@@ -31,6 +35,7 @@
 		"prettier-plugin-tailwindcss": "^0.1.11",
 		"prisma": "^3.14.0",
 		"tailwindcss": "^3.0.24",
+		"ts-node": "^10.7.0",
 		"typescript": "4.6.4"
 	}
 }
