--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
 		"next-connect": "^0.12.2",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
+		"swr": "^1.3.0",
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^6.3.1",
+		"@tailwindcss/line-clamp": "^0.4.0",
 		"@types/node": "17.0.34",
 		"@types/react": "18.0.9",
 		"@types/react-dom": "18.0.4",
